--- a/final.project/Source Code/FinalProject/SimulationElements/Dialog/BoxDetails.xaml
+++ b/final.project/Source Code/FinalProject/SimulationElements/Dialog/BoxDetails.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="FinalProject.SimulationElements.Dialog.BoxDetails"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BoxDetails" Height="470" Width="424" WindowStyle="ThreeDBorderWindow" ResizeMode="NoResize">
+        Title="BoxDetails" Height="470" Width="424" WindowStyle="ThreeDBorderWindow" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid>
         <Label Content="Box Name" HorizontalAlignment="Left" Margin="57,19,0,0" VerticalAlignment="Top" />
         <Button Content="Close" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75"
