--- a/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
+++ b/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
@@ -1,10 +1,9 @@
 ﻿<Window
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:helixKit="http://helixtoolkit.codeplex.com"
-    xmlns:simulationElements="clr-namespace:FinalProject.SimulationElements"
-    xmlns:FutureEventList="clr-namespace:FinalProject.SimulationElements.FutureEventList"
+    xmlns:futureEventList="clr-namespace:FinalProject.SimulationElements.FutureEventList"
     x:Class="FinalProject.SimulationWorld.World"
-    Title="World" Height="680" Width="840">
+    Title="World" Height="680" Width="840" Icon="../Simulator/Report/Template/aut.jpg">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -54,7 +53,7 @@
         <Label x:Name="LblSimulationClock" Content="Clock" Margin="10,10,0,0" Grid.Row="1" Height="37"
                VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" FontSize="13" />
 
-        <FutureEventList:SystemImageControl x:Name="SysImageCtrl" HorizontalAlignment="Left" Margin="269,0,0,10"
+        <futureEventList:SystemImageControl x:Name="SysImageCtrl" HorizontalAlignment="Left" Margin="269,0,0,10"
                                             Grid.Row="1" VerticalAlignment="Bottom" Width="253" />
 
     </Grid>
