--- a/final.project/Source Code/FinalProject/SimulationElements/Dialog/FutureEventListViewer.xaml
+++ b/final.project/Source Code/FinalProject/SimulationElements/Dialog/FutureEventListViewer.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="FinalProject.SimulationElements.Dialog.FutureEventListViewer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="FutureEventListViewer" Height="415" Width="364" DataContext="{Binding RelativeSource={RelativeSource Self}}" WindowStyle="ToolWindow" ResizeMode="CanResizeWithGrip">
+        Title="FutureEventListViewer" Height="415" Width="364" DataContext="{Binding RelativeSource={RelativeSource Self}}" WindowStyle="ToolWindow" ResizeMode="CanResizeWithGrip" ShowInTaskbar="False">
     <Grid>
         <ListView Name="LstViewData" ItemsSource="{Binding GetData }">
             <ListView.View>
