--- a/final.project/Source Code/FinalProject/Simulator/Report/ReportWindow.xaml
+++ b/final.project/Source Code/FinalProject/Simulator/Report/ReportWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Final Project - Report " Height="465" Width="708"
-        Activated="WindowActivated" WindowState="Maximized">
+        Activated="WindowActivated" WindowState="Maximized" Icon="/FinalProject;component/icon.ico">
     <Grid>
         <DocumentViewer Name="DocumentViewer" />
     </Grid>
